fix Z-indexes

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -81,7 +81,7 @@ body, html, .full-height {
 }
 
 .floating-controls {
-    background-color: white; z-index:10000
+    background-color: white; z-index:950
 }
 
 .floating-controls td {
@@ -675,7 +675,7 @@ canvas.ImagePort {width: 100%; height:100%; background:#ffffff; pointer-events:'
     background-position:0 0, 25px 0, 25px -25px, 0px 25px;
 }
 
-.react-draggable { z-index:20000 }
+.react-draggable { z-index:900 }
 
 .rangeInput { margin: 5px; display:flex; flex-direction: row }
 .rangeInput input { flex-grow: 1}
